# pdo-contracts

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  MAINTAINERS.md  Makefile  README.md  VERSION
common-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  README.md  setup.py
common-contract/etc/: guardian_service.toml
common-contract/pdo/contracts/: __init__.py  common.py
common-contract/scripts/: gs_start.sh  gs_stop.sh  ss_status.sh
digital-asset-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  README.md  da_common.cmake  setup.py
digital-asset-contract/context/: tokens.toml
digital-asset-contract/contracts/: guardian.cpp  guardian.h  token_object.cpp  token_object.h
digital-asset-contract/digital_asset/: guardian.h  token_object.h
digital-asset-contract/digital_asset/backup/: da_guardian.cpp
digital-asset-contract/digital_asset/contracts/: guardian.cpp  token_object.cpp
digital-asset-contract/etc/: digital_asset.toml
digital-asset-contract/pdo/digital_asset/: __init__.py
digital-asset-contract/test/: README.md  functional_test.psh  run_tests.sh  script_test.sh
docker/: Makefile  (+8 more)
example-contract/: CMakeLists.txt  MANIFEST  README.md  family.cmake  methods.cmake  setup.py
example-contract/context/: counter.toml
example-contract/etc/: example.toml
example-contract/pdo/example/: __init__.py
example-contract/src/contracts/: counter.cpp  counter.h
example-contract/src/example/: counter.h
example-contract/src/methods/: counter.cpp
example-contract/test/: README.md  functional_test.psh  run_tests.sh  script_test.sh
exchange-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  Makefile  README.md  exchange_common.cmake  methods.cmake  setup.py
exchange-contract/context/: marbles.toml  order.toml  tokens.toml
exchange-contract/contracts/: asset_type.cpp  data_guardian.cpp  exchange.cpp  issuer.cpp  token_issuer.cpp  token_object.cpp  token_object.h  vetting_organization.cpp
exchange-contract/docs/: asset_type.md  common_types.md  exchange.md  guardian.md  issuer.md  token.md  token_issuer.md  vetting.md
exchange-contract/docs/notebooks/: .gitignore  README.md  index.ipynb  index.md
exchange-contract/docs/specs/: basetypes.json  issuer.json
exchange-contract/docs/tests/: 05.token_transfer.md  06.single_issuer_wallet.md  07.multiple_issuer_wallet.md  08.multiple_user_wallet.md
exchange-contract/etc/: exchange.toml
exchange-contract/exchange/: asset_type.h  data_guardian.h  exchange.h  issuer.h  issuer_authority_base.h  token_issuer.h  token_object.h  vetting_organization.h
exchange-contract/exchange/common/: Asset.cpp  Asset.h  AssetRequest.cpp  AssetRequest.h  AuthoritativeAsset.cpp  AuthoritativeAsset.h  Common.cpp  Common.h  Escrow.cpp  Escrow.h  IssuerAuthority.cpp  IssuerAuthority.h  IssuerAuthorityChain.cpp  IssuerAuthorityChain.h  LedgerEntry.cpp  LedgerEntry.h  LedgerStore.cpp  LedgerStore.h
exchange-contract/exchange/contracts/: asset_type.cpp  data_guardian.cpp  exchange.cpp  issuer.cpp  issuer_authority_base.cpp  token_issuer.cpp  token_object.cpp  vetting_organization.cpp
exchange-contract/pdo/contracts/: __init__.py  common.py  common_widgets.py  groups.py  jupyter.py  keys.py
exchange-contract/pdo/exchange/: __init__.py  jupyter.py
exchange-contract/scripts/: README.md  approve_issuer.psh  create_issuer.psh  create_type.psh  create_vetting.psh  init.psh  initialize_issuer.psh  issue.psh  mint_token.psh  transfer_token.psh
exchange-contract/test/: .gitignore  README.md  functional_test.psh  run_tests.sh  script_test.sh
exchange-contract/test/tests/: asset_type.psh  create_issuer.psh  escrow1.psh  exchange1.psh  exchange2.psh  issuer1.psh  issuer2.psh  token1.psh  vetting.psh
hfmodels-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  README.md  hfmodels_common.cmake  setup.py
hfmodels-contract/context/: tokens.toml
hfmodels-contract/contracts/: token_object.cpp
hfmodels-contract/etc/: guardian_service.toml  hfmodels.toml
hfmodels-contract/hfmodels/: token_object.h
hfmodels-contract/hfmodels/contracts/: token_object.cpp
hfmodels-contract/pdo/hfmodels/: __init__.py
hfmodels-contract/scripts/: gs_start.sh  gs_status.sh  gs_stop.sh
hfmodels-contract/test/: script_test.sh
identity-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  README.md  family.cmake  identity_common.cmake  methods.cmake  setup.py
identity-contract/contracts/: identity.cpp  policy_agent.cpp  signature_authority.cpp
identity-contract/docs/examples/: vc_scai_attributes.json  vc_softball_coach.json  vc_softball_player.json
identity-contract/docs/specs/: basetypes.json  credential.json
identity-contract/etc/: identity.toml
identity-contract/identity/: identity.h  policy_agent.h
identity-contract/identity/common/: BigNum.cpp  BigNum.h  Credential.cpp  Credential.h  Missing.cpp  SigningContext.cpp  SigningContext.h  SigningContextManager.cpp
identity-contract/identity/contracts/: identity.cpp  policy_agent.cpp  (+1 more)
identity-contract/pdo/: __init__.py
identity-contract/scripts/: init.psh
identity-contract/test/: credential1.json  credential2.json  functional_test.psh  run_tests.sh  script_test.sh
inference-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  README.md  inference_common.cmake  methods.cmake  setup.py
inference-contract/context/: tokens.toml
inference-contract/contracts/: token_object.cpp
inference-contract/data/: LICENSE
inference-contract/etc/: guardian_service.toml  inference.toml
inference-contract/inference/: token_object.h
inference-contract/scripts/: gs_start.sh  gs_status.sh  ss_start.sh
inference-contract/test/: guardian_frontend.sh  script_test.sh
medperf-contract/: CMakeLists.txt  MANIFEST  MANIFEST.in  PROTOCOL.md  README.md  easy_test.sh  medperf_common.cmake  setup.py
medperf-contract/context/: tokens.toml
medperf-contract/contracts/: token_object.cpp
medperf-contract/etc/: medperf.toml
medperf-contract/medperf/: token_object.h
medperf-contract/scripts/: gs_start.sh  gs_status.sh  gs_stop.sh  ss_stop.sh
medperf-contract/test/: mp_test.sh  script_test.sh
(+243 files in other folders)
